Fix overflow x and layout landscape

--- a/assets/css/style-sentinelas.css
+++ b/assets/css/style-sentinelas.css
@@ -510,4 +510,14 @@ SITE DOS SENTINELAS RESPONSIVO
         background-size: 440px 720px;
         background-repeat: no-repeat;
     }
+    body, html {
+      overflow-x:hidden;
+    }
+}
+
+@media only screen and (max-width: 768px) and (orientation: landscape) {
+      .slider {
+        background-size: 785px 720px;
+        background-repeat: no-repeat;
+    }
 }
